Fix gradle run, header comments clean up